load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "websocket_example_lib",
    srcs = ["main.go"],
    importpath = "github.com/karagog/polygon-io-client-golang/websocket_example",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_binary(
    name = "websocket_example",
    embed = [":websocket_example_lib"],
    visibility = ["//visibility:public"],
)
