load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "testcli_lib",
    srcs = ["main.go"],
    importpath = "github.com/karagog/polygon-io-client-golang/client/testcli",
    visibility = ["//visibility:private"],
    deps = ["//client"],
)

go_binary(
    name = "testcli",
    embed = [":testcli_lib"],
    visibility = ["//visibility:public"],
)
